# 3D-Cellular-Automaton

./: LICENSE  README.md
proofs/: flattened_indexing.agda
server/: Cargo.toml  README.md  exp-1spec-influence kopie.csv  exp-1spec-influence.csv  experiment.csv  op_new_test.csv  order-parameter.csv  test_experiment.csv  test_experiment_duo.csv
server/src/: appdata.rs  gltfgeneration.rs  main.rs  routes.rs
server/src/appdata/: dim2d.rs  dim3D.rs
server/src/appdata/dim2d/: automaton_2d_gpu.rs  automaton_2d_gpu_shader.metal  order_param_2d.metal
server/src/appdata/dim3D/: automata.rs  automaton.rs  grid.rs  order_parameters.rs
server/src/appdata/dim3D/automata/: automaton.rs  automaton_chunk.rs  automaton_cpu.rs  automaton_gpu.rs  automaton_gpu_n_chemicals.rs  automaton_gpu_old.rs  automaton_n_chemicals_shader.metal  automaton_shader.metal  order_param_n_chemicals_shader.metal
server/src/appdata/dim3D/order_parameters/: order_param.rs  order_param_n_chemicals.rs
server/src/gltfgeneration/: garland_heckbert.rs  gltf_conversion.rs  gltf_generation.rs  mcubes.rs  quadric_vertex.rs
server/src/routes/: batch.rs  benchmarks.rs  cpu_get.rs  cpu_post.rs  debug_routes.rs  dim2d_get.rs  dim2d_post.rs  general_get.rs  general_post.rs  get.rs  gpu_get.rs  gpu_post.rs  nchem_get.rs  nchem_post.rs  post.rs  put.rs
server/src/routes/benchmarks/: compare_cpu_gpu.rs  gpu_shader_increment.rs
web/src/lib/wasm/: Cargo.toml
web/src/lib/wasm/src/: data.rs  lib.rs
web/src/lib/wasm/src/data/: automata.rs  chemicals.rs  grids.rs
web/src/lib/wasm/src/modules/: Voxel.rs
(+28 files in other folders)
