[package]
name = "wasm"
version = "1.0.0"
authors = ["R.C.M. Dur <R.C.M.Dur@student.tudelft.nl>"]
description = "A WebAssembly library for 3D Cellular Automaton project"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }